--- a/app/assets/config.html
+++ b/app/assets/config.html
@@ -6,237 +6,7 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
   </head>
   <body>
-    <form id="config" onsubmit="return validateForm()">
-      <fieldset class="mb-4 p-4 border rounded">
-        <legend class="text-sm font-medium text-gray-600">Scenarios</legend>
-        <div class="mb-4">
-          <label
-            for="scenarioSwitcher"
-            class="block text-sm font-medium text-gray-600"
-            >Scenario Switcher (Column)</label
-          >
-          <input
-            id="scenarioSwitcher"
-            type="text"
-            class="mt-1 py-1 px-2 w-full border rounded-md text-sm"
-          />
-          <span id="scenarioSwitcherError" class="text-red-500 hidden"></span>
-        </div>
-
-        <div class="mb-4">
-          <label
-            for="modelOutput"
-            class="block text-sm font-medium text-gray-600"
-            >Model Output (Cell)</label
-          >
-          <input
-            id="modelOutput"
-            type="text"
-            class="mt-1 py-1 px-2 w-full border rounded-md text-sm"
-          />
-          <span id="modelOutputError" class="text-red-500 hidden"></span>
-        </div>
-      </fieldset>
-
-      <fieldset class="mb-4 p-4 border rounded">
-        <legend class="text-sm font-medium text-gray-600">Inputs</legend>
-
-        <div class="mb-4">
-          <label
-            for="pessimisticColumn"
-            class="block text-sm font-medium text-gray-600"
-            >Pessimistic Scenario (Column)</label
-          >
-          <input
-            id="pessimisticColumn"
-            type="text"
-            class="mt-1 py-1 px-2 w-full border rounded-md text-sm"
-          />
-          <span id="pessimisticColumnError" class="text-red-500 hidden"></span>
-        </div>
-
-        <div class="mb-4">
-          <label
-            for="baseColumn"
-            class="block text-sm font-medium text-gray-600"
-            >Base Scenario (Column)</label
-          >
-          <input
-            id="baseColumn"
-            type="text"
-            class="mt-1 py-1 px-2 w-full border rounded-md text-sm"
-          />
-          <span id="baseColumnError" class="text-red-500 hidden"></span>
-        </div>
-
-        <div class="mb-4">
-          <label
-            for="optimisticColumn"
-            class="block text-sm font-medium text-gray-600"
-            >Optimistic Scenario (Column)</label
-          >
-          <input
-            id="optimisticColumn"
-            type="text"
-            class="mt-1 py-1 px-2 w-full border rounded-md text-sm"
-          />
-          <span id="optimisticColumnError" class="text-red-500 hidden"></span>
-        </div>
-      </fieldset>
-
-      <button
-        id="submit"
-        type="submit"
-        class="mt-4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded opacity-50 cursor-not-allowed pointer-events-none"
-        disabled
-      >
-        Save
-      </button>
-    </form>
-
-    <?!= include('app/assets/configjs.html'); ?>
-
-    <script>
-      // Config
-
-      const invalidInputClasses = ['border-red-500', 'text-red-500', 'invalid'];
-
-      const disabledClasses = [
-        'opacity-50',
-        'cursor-not-allowed',
-        'pointer-events-none',
-      ];
-
-      function isFormValid() {
-        const $form = document.getElementById('config');
-        const $inputs = $form.querySelectorAll('input');
-        const $submit = $form.querySelector('button[type="submit"]');
-
-        $inputs.forEach(($input) => {
-          $input.onchange();
-        });
-
-        if ($form.querySelectorAll('.invalid').length > 0) {
-          $submit.classList.add(...disabledClasses);
-          return false;
-        }
-
-        $submit.classList.remove(...disabledClasses);
-        return true;
-      }
-
-      window.addEventListener('load', () => {
-        // Helpers
-
-        const resetFormInput = ([$input, $label, $error]) => {
-          $input.classList.remove(...invalidInputClasses);
-          $label.classList.remove('text-red-500');
-          $error.classList.add('hidden');
-        };
-
-        const formInput = (id, validate) => {
-          const $input = document.getElementById(id);
-
-          $input.onchange = () => {
-            const { valid, message } = validate($input.value);
-
-            if (valid) {
-              resetFormInput([
-                $input,
-                document.querySelector(`label[for="${id}"]`),
-                document.getElementById(`${id}Error`),
-              ]);
-            } else {
-              errorFormInput([
-                $input,
-                document.querySelector(`label[for="${id}"]`),
-                document.getElementById(`${id}Error`),
-                message,
-              ]);
-            }
-          };
-
-          return [
-            $input,
-            document.querySelector(`label[for="${id}"]`),
-            document.getElementById(`${id}Error`),
-          ];
-        };
-
-        const errorFormInput = ([$input, $label, $error, message]) => {
-          $input.classList.add(...invalidInputClasses);
-          $label.classList.add('text-red-500');
-          $error.classList.remove('hidden');
-          $error.textContent = message;
-        };
-
-        // Patterns
-
-        const columnPattern = /^[A-Z]+$/;
-        const cellPattern = /^[A-Z]+\d+$/;
-
-        // Inputs
-
-        const [
-          $scenarioSwitcher,
-          $scenarioSwitcherLabel,
-          $scenarioSwitcherError,
-        ] = formInput('scenarioSwitcher', (value) => ({
-          valid: columnPattern.test(value),
-          message: 'Must be a column letter',
-        }));
-
-        const [$modelOutput, $modelOutputLabel, $modelOutputError] = formInput(
-          'modelOutput',
-          (value) => {
-            if (!cellPattern.test(value)) {
-              return { valid: false, message: 'Must be a cell reference' };
-            }
-
-            const [column, row] = value.split(/(\d+)/).filter(Boolean);
-
-            if (column === $scenarioSwitcher.value) {
-              return {
-                valid: false,
-                message:
-                  'Model output cannot be in the same column as the scenario switcher',
-              };
-            }
-
-            return { valid: true };
-          },
-        );
-
-        const [
-          $pessimisticColumn,
-          $pessimisticColumnLabel,
-          $pessimisticColumnError,
-        ] = formInput('pessimisticColumn', (value) => ({
-          valid: columnPattern.test(value),
-          message: 'Must be a column letter',
-        }));
-
-        const [$baseColumn, $baseColumnLabel, $baseColumnError] = formInput(
-          'baseColumn',
-          (value) => ({
-            valid: columnPattern.test(value),
-            message: 'Must be a column letter',
-          }),
-        );
-
-        const [
-          $optimisticColumn,
-          $optimisticColumnLabel,
-          $optimisticColumnError,
-        ] = formInput('optimisticColumn', (value) => ({
-          valid: columnPattern.test(value),
-          message: 'Must be a column letter',
-        }));
-      });
-
-      function validateForm() {
-        return isFormValid();
-      }
-    </script>
+    <div id="root"></div>
+    <?!= include('app/assets/javascript.html'); ?>
   </body>
 </html>
