switcher column, model output cell, config validation, logs

--- a/app/assets/confirm.html
+++ b/app/assets/confirm.html
@@ -93,7 +93,13 @@
           buttonLoading();
 
           google.script.run
-            .withSuccessHandler(() => {
+            .withSuccessHandler(({ success, message }) => {
+              if (!success) {
+                error(message);
+                buttonNotLoading();
+                return;
+              }
+
               google.script.host.close();
               buttonNotLoading();
             })
